# ailib

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ailib/: CMakeLists.txt
ailib/cmake/: ailibConfig.cmake.in  windows_predefines.cmake
ailib/include/ailib/: aialgorithm.h  aichrono.h  aierror.h  aistr.h
ailib/src/: aichrono.cpp  aierror.cpp  aistr.cpp
example_exec/: CMakeLists.txt
example_exec/src/: main.cpp
test/: CMakeLists.txt
test/cmake/: msvc_force_mt.cmake  msvc_force_w4.cmake  msvc_predefines.cmake
test/src/: test_aialgorithm.cpp  test_aichrono.cpp  test_aierror.cpp  test_aistr.cpp
